# Rubiks_cube_solver

./: CMakeLists.txt  RubiksCube.cpp  RubiksCube.h  generic_rubiks_cube.cpp  generic_rubiks_cube.h
PatternDataBases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
Solver/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
model/: RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp  RubiksCubeBitboard.cpp
model/pattern database/: PatternDatabase.h
